# 42SH

./: .gitignore  Makefile.am  README.md  clean.sh  configure.ac
src/: .test.sh.swp  Makefile.am  clean.sh  main.c  test.sh  test1.sh
src/execution/: Makefile.am  builtins.c  builtins.h  exec.c  exec.h
src/lexer/: Makefile.am  exec  lexer.c  lexer.h  lexer_test  main.c  token.h
src/parser/: 42sh  Makefile.am  and_or_parser.c  ast.c  ast.h  if_parser.c  main.c  parser.c  parser.h  parser_test  test.sh  test_ast.c
src/utils/: Makefile.am  args.h  args_count.h  oldpwd.h  pwd.h  utils.c  utils.h  variables.h  variables_count.h
tests/: Makefile.am  script.sh  test.sh  test_suite.sh
